--- a/css/style.css
+++ b/css/style.css
@@ -263,3 +263,26 @@ a {
 .fa-whatsapp {
   margin-top: 16px;
 }
+
+.contact-email {
+  margin-bottom: 16px;
+}
+
+.openning-hour {
+  margin-top: 16px;
+}
+
+.contact-button {
+  margin: 18px 0;
+  padding: 10px 20px;
+  background:#fff;
+  color: #000;
+  font-weight: bold;
+  border-radius: 2px;
+}
+
+@media (min-width: 769px) {
+  .login-link {
+    display: none;
+  }
+}
