--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,12 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+  }
+
 #navbar {
-    height: 180px;
+    height: 220px;
     position: initial;
 }
 
@@ -15,6 +22,11 @@
 }
 
 #navbar-items li:nth-child(2) {
+    border-top: 1px solid #333;
+    border-bottom: 1px solid #333;
+}
+
+#navbar-items li:nth-child(3) {
     border-top: 1px solid #333;
     border-bottom: 1px solid #333;
 }
@@ -82,4 +94,80 @@
 
 }
 
+.login-background {
+    background-color: #111;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
 
+.login-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 300px;
+    height: 300px;
+    background-color: #fff;
+    border-radius: 8px;
+}
+
+.login-email {
+    background-color: #111;
+    color: #fff;
+    margin-bottom: 20px;
+    width: 80%;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    padding: 8px;
+}
+
+.login-password {
+    color: #fff;
+    background-color: #111;
+    margin-bottom: 20px;
+    width: 80%;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    padding: 8px;
+    
+}
+
+.login-button {
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+    background-color: #111;
+    margin-bottom: 20px;
+    width: 80%;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    padding: 8px;
+}
+
+.title-login {
+    color: #111;
+    margin-bottom: 8px;
+}
+
+.not-background {
+    background-color: #111;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+
+.not-container {
+    margin-top: 30px;
+    height: 60px;
+    width: 80%;
+    display: flex;
+    background-color: #fff;
+    justify-content: space-between;
+    padding: 12px;
+    border-radius: 8px;
+}
